--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "link": "react-native link react-native-vector-icons",
     "test": "jest"
   },
   "jest": {
