--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-image-picker": "^0.26.7",
+    "react-native-maps": "^0.21.0",
     "react-native-navigation": "^1.1.434",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
